# actix-web-validator

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: error.rs  form.rs  json.rs  lib.rs  main.rs  path.rs  qsquery.rs  query.rs
tests/: test_error_transformation.rs  test_form_validation.rs  test_json_validation.rs  test_path_validation.rs  test_qsquery_validation.rs  test_query_validation.rs
