[package]
name = "actix-web-validator"
version = "5.0.1"
authors = [
    "Belousow Makc <lib.bmw@gmail.com>",
    "Andrey Ermilov <andrerm@ya.ru>",
    "Kolomatskiy Artem <kolomatskiy@bk.ru>",
]
edition = "2021"
description = "Validation mechanism for actix-web"
keywords = [
    "actix-web",
    "serialization",
    "querystring",
    "validator",
    "validation",
]
categories = ["encoding", "web-programming"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rambler-digital-solutions/actix-web-validator"
documentation = "https://docs.rs/actix-web-validator/"

[dependencies]
actix-web = { version = "4", default-features = false }
actix-http = { version = "3" }
validator = { version = "0.18" }
serde = "1"
serde_urlencoded = "0.7"
serde_json = "1"
serde_qs = { version = "0.12", features = ["actix4"] }
log = "0.4"
futures = "0.3"
mime = "0.3"
bytes = "1"
actix-router = "0.5"
futures-util = "0.3"
thiserror = "1.0"

[dev-dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
validator = { version = "0.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
actix-service = "2"
